# gift-card-webapp

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: lib.rs  main.rs
src/commons/models/: directus.rs  login.rs  mod.rs  permissions.rs
src/components/: mod.rs  types.rs
src/components/forms/: loginform.rs  mod.rs
src/components/layouts/: footer.rs  gallerysection.rs  herosection.rs  mod.rs  modal.rs  navigation_bar.rs  sidebar.rs  sidebardropdownitem.rs  sidebaritem.rs
src/components/ui/: counter_btn.rs  mod.rs  progress_bar.rs  svg.rs
src/features/: mod.rs
src/features/home/: mod.rs
src/features/landing/: landing.rs
src/features/login/: bakcuplogin  login.rs  mod.rs  services.rs
src/features/orders/: closedorder.rs  mod.rs  openorder.rs  returnedorder.rs
src/styles/: tailwind.css
src/utilities/: encryption.rs  local_storage.rs  mod.rs
static/: styles.css
