[package]
name = "gift-card-webapp"
version = "0.1.0"
edition = "2021"
authors = ["Paulene <paulene@kodecraft.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.12", features = ["json"] }
serde_urlencoded = "0.7.1"
http = "1"
gloo-net = "0.5.0"
reqwasm = { version = "0.5.0", features = ["http", "json"] }
wasm-cookies = "0.2.1"
#leptos-use = "0.10.5"
chrono = "0.4.31"
magic-crypt = "3.1.12"
currency_rs = "1.3.0"
num-format = "0.4.4"
rust_decimal = "1.32.0"
h_modals = "0.2.6"
base64 = "0.22"
uuid = {version = "1.4.1", features = ["v4"]}
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = { version = "0.3.70", features = ["AbortController", "AbortSignal", "HtmlDocument", "WebSocket", "Blob", "BlobPropertyBag", "Window"]}
leptab = {version = "1"}
leptos_reqwest = "0.1.0"
#for payoff diagram
plotly = { version = "0.9.0", features = ["wasm", "js-sys"] }
plotly_derive = "0.9.0"
js-sys = "0.3.69"
ndarray = "0.15.6"
leptos-use = { version = "0.13.5", features = ["math"] }
rand = "0.8.5"
codee = "0.2.0"
wasm-bindgen-futures = "0.4"


# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
